created profile prod

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,21 @@
 ---
 spring:
+  profiles: prod
+  datasource:
+    url: jdbc:mysql://${database-url}/caelum_treinamentos?createDatabaseIfNotExist=true
+    username: root
+    password:
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+  properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+
+
+---
+spring:
   profiles: dev
   datasource:
     url: jdbc:mysql://localhost/caelum_treinamentos?createDatabaseIfNotExist=true
